CKAD/6. Services & Networking/4. Network Policies/db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes: # "Egress" traffic is not affected and is allowed by default.
    - ingress # To narrow down "Egress", it needs to be added along with an "Egress" rule
  ingress:
    - from:
      - podSelector:
        matchLabels:
          role: api-pod
    ports:
      port: 3306
      protocol: TCP
